2017-11-14 Fixed problem with math gaps in Text when changing page quickly.
2017-11-09 Added commands to fire keyboard navigation
2017-11-09 Added Tabindex property for next part of modules.
2017-11-09 Added show play button for video addon. Added setVideoURL command for video addon.
2017-11-06 Fixed problems with Magic_Boxes view.
2017-10-31 Added Tabindex property for modules. Added tabindex handling for Choice, Connection, TrueFalse, Ordering and Memo.
2017-10-31 Fixed problem with adding scroll handlers in IWB Toolbar.
2017-10-23 Fixed problem with defining functions in math. Fixed problem with calling build in functions in math.
2017-10-23 Added keyboard navigation in Table of Contents module
2017-10-16 Added sending events on select and deselect and corresponding property.
2017-10-16 Load button for list property in editor showed only for iframe module.
2017-10-12 Fixed test configuration in Quiz module
2017-10-12 Fixed bug with TextAudio still playing sound after closing popup with it
2017-10-11 Fixed Programming Code Prompt module - enter now creates a new line.
2017-10-11 Added property to Ordering module, which disallows generating a correct ordering by random.
2017-10-11 Fixed problem with errors in console in iFrame module
2017-10-11 Added new addon Quiz
2017-10-10 Added alternative name styling property in Hierarchical Lesson Report.
2017-10-09 Added closed panel drawing property in IWB Toolbar module
2017-10-05 Added shooting range addon.
2017-10-05 Added language attribute in Text module and lesson
2017-10-05 Fixed problem with too large page index
2017-10-02 Fixed imageSource that got position zeroed when called reset() on it after PageLoaded event
2017-10-02 Fixed problem with jumping video. Fixed problem with poster visibility.
2017-10-02 Fixed problem with showing glossary popup in present view.
2017-10-02 Fixed problem with auto play in Video module
2017-09-29 Removed gap definition from html attributes in text module