@@ -319,6 +319,7 @@ var ice_dictionary_en = {
 	"image_source_image" : "Image",
 	"image_source_removable" : "Removable",
 	"image_source_is_disabled": "Is&nbsp;Disabled",
+	"image_source_alt_text": "Alternative text",
 	"ordering_module" : "Ordering",
 	"ordering_is_vertical" : "Is Vertical",
 	"ordering_new_item" : "New Item",
@@ -584,6 +585,7 @@ var ice_dictionary_en = {
 	"Image_Identification_property_is_not_an_activity": "Is not an activity",
 	"Image_Identification_property_block_in_error_checking_mode": "Block in error checking mode",
     "Image_Identification_property_block_wrong_answers" : "Block wrong answers",
+	"Image_Identification_property_alt_text": "Alternative text",
 	"Image_Viewer_Public_info": "Allows to insert simple animations in which new frames are shown on selection. There is also the possibility of adding a sound notification on a changing frame, subtitles, a frame counter or a watermark indicating the \"Play\" button. Image viewer supports 3 audio file formats: mp3, ogg Vorbis and aac.",
 	"Image_Viewer_Public_name": "Image Viewer",
 	"Image_Viewer_Public_property_image": "Image",
@@ -737,6 +739,7 @@ var ice_dictionary_en = {
 	"multiplegap_property_number_of_repetitions": "Number of repetitions",
 	"multiplegap_property_id_repeated_element": "ID repeated element",
 	"multiplegap_property_block_wrong_answers": "Block wrong answers",
+	"multiplegap_property_alt_text": "Alternative text",
 	"Navigation_Bar_info": "Allows to add a ready-made navigation bar to a presentation. Since it doesn't require any additional configuration, it is enough to insert it into a presentation and enjoy its functions. Because of the addon's extensive styling mechanism, it has a perfect usage in presentation templates.",
 	"Navigation_Bar_name": "Navigation Bar",
 	"Navigation_Bar_property_show_next_prev_arrows": "Show Next and Prev arrows",
@@ -1524,6 +1527,7 @@ var ice_dictionary_en = {
 	"IFrame_property_index_file": "Index file",
 	"IFrame_property_communication_id": "Communication id",
 	"IFrame_property_allow_fullscreen": "Allow Fullscreen",
+	"IFrame_property_alt_text": "Alternative text",
 	"Shooting_Range_info": "This addon allows users to click falling down values in defined time.",
 	"Shooting_Range_name": "Shooting Range",
 	"Shooting_Range_property_definitions": "Definitions",
