@@ -315,6 +315,7 @@ var ice_dictionary_fr = {
 "image_source_image" : "Image",
 "image_source_removable" : "Déplaçable",
 "image_source_is_disabled": "Est&nbsp;désactivé",
+"image_source_alt_text": "Alternative text",
 "ordering_module" : "Remettre dans l'ordre",
 "ordering_is_vertical" : "Est vertical",
 "ordering_new_item" : "Nouvel élément",
@@ -678,6 +679,7 @@ var ice_dictionary_fr = {
 "Image_Identification_property_is_not_an_activity": "N'est pas un exercice",
 "Image_Identification_property_block_in_error_checking_mode": "Bloquer en mode vérification d'erreurs",
 "Image_Identification_property_block_wrong_answers" : "Bloquer les mauvaises réponses",
+"Image_Identification_property_alt_text": "Alternative text",
 "Image_Viewer_Public_info": "Permet d'insérer des animations simples dans lesquelles de nouvelles images sont présentées sur sélection. Il est possible d'ajouter un son de notification quand on change d'image, des sous-titres, un compteur d'images ou un filigrane avec le bouton \"Play\". La visionneuse d'images supporte 3 formats de fichiers audio : mp3, ogg Vorbis et aac.",
 "Image_Viewer_Public_name": "Visionneuse d'images",
 "Image_Viewer_Public_property_image": "Image",
@@ -831,6 +833,7 @@ var ice_dictionary_fr = {
 "multiplegap_property_number_of_repetitions": "Nombre de répétitions",
 "multiplegap_property_id_repeated_element": "Elément avec ID répété",
 "multiplegap_property_block_wrong_answers": "Bloquer les mauvaises réponses",
+"multiplegap_property_alt_text": "Alternative text",
 "Navigation_Bar_info": "Permet d'ajouter une barre de navigation dans une présentation. Comme cela ne nécessite aucune configuration supplémentaire, il suffit de l'insérer dans une présentation et profiter de ses fonctions. Elle peut être personnalisée et donc insérée dans tous les modèles de présentation.",
 "Navigation_Bar_name": "Barre de navigation",
 "Navigation_Bar_property_show_next_prev_arrows": "Afficher les flèches Suivant et Précédent",
@@ -1516,6 +1519,7 @@ var ice_dictionary_fr = {
 "IFrame_property_index_file": "Index file",
 "IFrame_property_communication_id": "Communication id",
 "IFrame_property_allow_fullscreen": "Allow Fullscreen",
+"IFrame_property_alt_text": "Alternative text",
 "Shooting_Range_info": "This addon allows users to click falling down values in defined time.",
 "Shooting_Range_name": "Shooting Range",
 "Shooting_Range_property_definitions": "Definitions",
