@@ -316,6 +316,7 @@ var ice_dictionary_mx = {
 	"image_source_image": "Imagen",
 	"image_source_removable": "Usar la imagen sólo una vez",
 	"image_source_is_disabled": "Inhabilitar",
+	"image_source_alt_text": "Alternative text",
 	"ordering_module": "Ordenar",
 	"ordering_is_vertical": "Vertical",
 	"ordering_new_item": "Nuevo ítem",
@@ -678,6 +679,7 @@ var ice_dictionary_mx = {
 	"Image_Identification_property_is_not_an_activity": "No es actividad",
 	"Image_Identification_property_block_in_error_checking_mode": "Bloquear en modo de comprobación de respuestas",
 	"Image_Identification_property_block_wrong_answers": "Bloquear respuestas incorrectas",
+	"Image_Identification_property_alt_text": "Alternative text",
 	"Image_Viewer_Public_info": "Permite a insertar animaciones sencillas: las nuevas pantallas se muestran al hacer un clic. También permite añadir un sonido al cambiar la imagen. Es compatible con 3 formatos de audio: MP3, Ogg Vorbis, ACC.",
 	"Image_Viewer_Public_name": "Visor de imágenes",
 	"Image_Viewer_Public_property_image": "Imagen",
@@ -831,6 +833,7 @@ var ice_dictionary_mx = {
 	"multiplegap_property_number_of_repetitions": "Número de repeticiones",
 	"multiplegap_property_id_repeated_element": "ID de elemento repetido",
 	"multiplegap_property_block_wrong_answers": "Bloquear respuestas incorrectas",
+	"multiplegap_property_alt_text": "Alternative text",
 	"Navigation_Bar_info": "Permite añadir una barra de navegación para la presentación. No requiere ninguna configuración adicional, basta con insertarla en la presentación y disfrutar de sus funciones. Debido a su extenso mecanismo de estilos tiene un uso perfecto en las plantillas de presentaciones.",
 	"Navigation_Bar_name": "Barra de navegación",
 	"Navigation_Bar_property_show_next_prev_arrows": "Mostrar las flechas Siguiente y Anterior",
@@ -1516,6 +1519,7 @@ var ice_dictionary_mx = {
 	"IFrame_property_index_file": "Archivo de índice",
 	"IFrame_property_communication_id": "ID de comunicación",
 	"IFrame_property_allow_fullscreen": "Allow Fullscreen",
+	"IFrame_property_alt_text": "Alternative text",
 	"Shooting_Range_info": "This addon allows users to click falling down values in defined time.",
 	"Shooting_Range_name": "Shooting Range",
 	"Shooting_Range_property_definitions": "Definitions",
