@@ -315,6 +315,7 @@
 	"image_source_image" : "Obraz",
 	"image_source_removable" : "Usuwalna",
 	"image_source_is_disabled": "Jest&nbsp;wyłączony",
+	"image_source_alt_text": "Alternative text",
 	"ordering_module" : "Porządkowanie",
 	"ordering_is_vertical" : "Pionowo",
 	"ordering_new_item" : "Nowy element",
@@ -678,6 +679,7 @@
 	"Image_Identification_property_is_not_an_activity" : "Nie jest ćwiczeniem",
 	"Image_Identification_property_block_in_error_checking_mode" : "Zablokuj w trybie sprawdzania odpowiedzi",
     "Image_Identification_property_block_wrong_answers" : "Zablokuj niepoprawne odpowiedzi",
+	"Image_Identification_property_alt_text": "Alternative text",
 	"Image_Viewer_Public_name" : "Przeglądarka obrazów",
 	"Image_Viewer_Public_property_image": "Obraz",
 	"Image_Viewer_Public_property_frames": "Klatki",
@@ -830,6 +832,7 @@
 	"multiplegap_property_number_of_repetitions": "Liczba powtórzeń",
 	"multiplegap_property_id_repeated_element": "ID powtórnego elementu",
 	"multiplegap_property_block_wrong_answers": "Zablokuj błędne odpowiedzi",
+	"multiplegap_property_alt_text": "Alternative text",
 	"Navigation_Bar_info" : "Umożliwia dodanie do prezentacji gotowego paska nawigacyjnego, który nie wymaga dodatkowej konfiguracji; wystarczy wstawić Addon do prezentacji i w pełni korzystać z jego funkcji. Dzięki bogatym opcjom nadawania stylów CSS, pasek nawigacyjny jest doskonałym dodatkiem do szablonów.",
 	"Navigation_Bar_name" : "Pasek nawigacyjny",
 	"Navigation_Bar_property_show_next_prev_arrows": "Pokaż strzałki Dalej i Wstecz",
@@ -1515,6 +1518,7 @@
 	"IFrame_property_index_file": "Plik indeksowy",
 	"IFrame_property_communication_id": "ID komunikacyjne",
 	"IFrame_property_allow_fullscreen": "Włącz tryb pełnoekranowy",
+	"IFrame_property_alt_text": "Alternative text",
 	"Text_use_escape_character_in_gap_property": "Użyj znaku escape w luce",
 	"date": "Data",
 	"sort_by": "Sortuj według:",
